--- a/www/src/apps/templates/index.html
+++ b/www/src/apps/templates/index.html
@@ -10,7 +10,7 @@ Trang chủ
     <div class="col-2 sidebar" id="sidebar">
         <div class="d-flex align-items-center p-3 justify-content-between">
             <h4 class="text-center">OSAS</h4>
-            <a href="#" class="toggle-sidebar menu-icon" onclick="togglesSidebar()">
+            <a href="#" class="toggle-sidebar menu-icon" onclick="toggleSidebar()">
                 <i class="fas fa-step-backward text-white"></i>
             </a>
         </div>
@@ -31,6 +31,5 @@ Trang chủ
         {% endif %}
     </div>
 </div>
-
 
 {% endblock %}
