--- a/www/src/apps/templates/macros.html
+++ b/www/src/apps/templates/macros.html
@@ -1,43 +1,9 @@
-<!-- {% macro render_menu(menu, parent_code="") %}
-	<ul id="main-menu" class="nav flex-column ">
-		{% for item in menu %}
-			{% if item.parent == "" %}
-				<li class="nav-item w-100" data-bs-toggle="collapse" aria-expanded="false">
-					{% if not item.has_children %}
-						<a href="{{ url_for('index_route.index', route=item.route) }}">
-							<i class="{{ item.icon }}"></i> {{ item.name }}
-						</a>
-					{% else %}
-						<span >
-							
-							<i class="{{ item.icon }}"></i> {{ item.name }}
-							
-						</span>
-					{% endif %}
-					{% if item.has_children %}
-						<ul>
-							{% for child in menu %}
-								{% if child.parent == item.code %}
-									
-									<a class="nav-link" href="{{ url_for('index_route.index', route='/echarts/' + child.code) }}">
-										{{ child.name }}
-									</a>
-								
-								{% endif %}
-							{% endfor %}
-						</ul>
-					{% endif %}
-				</li>
-			{% endif %}
-		{% endfor %}
-	</ul>
 
-{% endmacro %}  -->
 {% macro render_menu(menu, parent_code="") %}
 	<ul id="main-menu" class="nav flex-column">
 		{% for item in menu %}
 			{% if item.parent == "" %}
-				<li class="nav-item w-100" data-bs-toggle="collapse" aria-expanded="false">
+				<li class="nav-item w-100"  aria-expanded="false">
 					{% if not item.has_children %}
 						<a href="{{ url_for('index_route.index', route=item.route) }}">
 							<i class="{{ item.icon }}"></i> {{ item.name }}
@@ -67,47 +33,4 @@
 
 {% endmacro %} 
 {{ render_menu(menu) }}
-
-
-
-<!-- 
-<ul class="nav flex-column {% if parent_code %}submenu collapse{% else %}nav-main{% endif %}"
-	{% if parent_code %}id="submenu-{{ parent_code|replace(' ', '-')|lower }}"
-	{% endif %} >
-	{% for item in menu if item.parent == parent_code %}
-	<li class="nav-item w-100">
-		{% set has_children = item.code in menu | map(attribute='parent') %} {% if
-		has_children %}
-
-		<a
-			class="nav-link dropdown-toggle"
-			href="/chart-route/123"
-			data-bs-toggle="collapse"
-			data-bs-target="#submenu-{{ item.code|replace(' ', '-')|lower }}"
-			aria-expanded="false">
-			{% if item.icon %}
-			<span class="icon-space"><i class="{{ item.icon }}"></i></span>
-			{% endif %}
-			<div
-				class="w-100 d-flex align-items-center"
-				style="justify-content: space-between">
-				{{ item.name }}
-				<i class="dropdown-icon fa fa-chevron-down"></i>
-			</div>
-		</a>
-		{{ render_menu(menu, item.code) }} {% else %}
-		<a class="nav-link" href="{{ item.route }}">
-			{% if item.icon %}
-			<span class="icon-space"><i class="{{ item.icon }}"></i></span>
-			{% endif %}
-			<div class="w-100">{{ item.name }}</div>
-		</a>
-		{% endif %}
-	</li>
-	{% endfor %}
-</ul> 
--->
-
-
-
 
