--- a/www/src/admin/templates/customer/customer_management.html
+++ b/www/src/admin/templates/customer/customer_management.html
@@ -67,7 +67,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="rounded-circle bg-primary text-white text-center me-3"
                                         style="width: 35px; height: 35px; line-height: 35px;">
-                                        {{ customer.Name[0] }}
+                                        {{ customer.name[0] }}
                                     </div>
                                     <div>
                                         <div class="fw-semibold">{{ customer.Name }}</div>
