--- a/www/src/apps/templates/base.html
+++ b/www/src/apps/templates/base.html
@@ -34,32 +34,8 @@
       </div>
     </div>
 
-    <script>
-      function toggleSidebar() {
-        const sidebar = document.getElementById('sidebar')
-        sidebar.classList.toggle('collapsed')
-      
-        if (sidebar.classList.contains('collapsed')) {
-          localStorage.setItem('sidebarState', 'collapsed')
-          sidebar.style.width = '60px'
-        } else {
-          localStorage.setItem('sidebarState', 'expanded')
-          sidebar.style.width = '250px'
-        }
-      }
-      
-      document.addEventListener('DOMContentLoaded', function () {
-        const sidebar = document.getElementById('sidebar')
-        const savedState = localStorage.getItem('sidebarState')
-      
-        if (savedState === 'collapsed') {
-          sidebar.classList.add('collapsed')
-          sidebar.style.width = '60px'
-        }
-      })
-    </script>
-    <!-- Bootstrap JS -->
+    <!--  JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='user/js/sidebar_menu.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/sidebar_menu.js') }}"></script>
   </body>
 </html>
