--- a/www/src/apps/templates/header.html
+++ b/www/src/apps/templates/header.html
@@ -3,12 +3,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid align-items-center">
         <!-- Logo and Toggle Button -->
-        <div class="d-flex align-items-center me-5">
-			<div class="app-brand me-5">OSAS</div>
-            <button class="sidebar-toggle-btn" id="sidebarToggleBtn" onclick="toggleSidebar()">
-                <i class="fas fa-bars"></i>
-            </button>
+        <div class="app-brand me-5">
+            <a href="/" class="app-brand-link">OSAS</a>
         </div>
+        <button class="sidebar-toggle-btn" id="sidebarToggleBtn" onclick="toggleSidebar()">
+            <i class="fas fa-bars"></i>
+        </button>
         
        <!-- Customer Dropdown -->
        <div class="dropdown me-5">
