--- a/www/src/admin/templates/admin.html
+++ b/www/src/admin/templates/admin.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <div class="w-100">
-        <iframe src="{{ selected_route }}" frameborder="0" style="width: 100%; height: calc(100vh - 56px); border: none;"></iframe>
-        <h1>test<h1>
+    <iframe name="mainFrame" src="{{ selected_route }}" frameborder="0"
+        style="width: 100%; height: calc(100vh - 56px); border: none;"></iframe>
 </div>
 {% endblock %}
+        
