--- a/www/src/admin/templates/best_practice/detail_best_practice.html
+++ b/www/src/admin/templates/best_practice/detail_best_practice.html
@@ -46,7 +46,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Update</button>
-            <a href="{{ url_for('admin_route.best_practice_route.best_practice_management') }}" class="btn btn-secondary">Cancel</a>
+            <a href="/admin?route=/best-practice" target="_parent" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
